--- a/TODO
+++ b/TODO
@@ -2,7 +2,11 @@
 
 # PRINT DE VARIAVEL TEMPORARIA
 
+# PRINT DE EXPRESSAO
+
 # PRINT DE VETOR
+
+# PASSAR PARAMETRO FLOAT E CHAR
 
 # DIVISAO TA DANDO SEG FAULT
 
